--- a/index.html
+++ b/index.html
@@ -16,27 +16,148 @@
   <body>
     <header>
       <h1><a href="#">Callum Donovan</a></h1>
-      <small>PHP | Golang | JS | HTML & CSS | React</small>
     </header>
     <main>
-      <p>
-        Software Engineer with a shitload of experience dealing with proper
-        annoying people
-      </p>
+      <section>
+        <h2>Profile</h2>
+        <p>
+          Software Engineer with a shitload of experience dealing with proper
+          annoying people
+        </p>
+      </section>
       <section>
         <h2>Skills</h2>
+        <h3>Languages</h3>
+        <ul>
+          <li>PHP</li>
+          <li>Golang</li>
+          <li>JavaScript / TypeScript</li>
+          <li>SQL (MySQL, PostgreSQL, SQLite)</li>
+          <li>HTML / CSS</li>
+        </ul>
+        <h3>Frameworks</h3>
+        <ul>
+          <li>Laravel</li>
+          <li>React / React Native (Expo) / NextJS</li>
+        </ul>
+        <h3>Tools</h3>
+        <ul>
+          <li>Docker</li>
+          <li>AWS</li>
+          <li>Terraform</li>
+          <li>Git</li>
+        </ul>
       </section>
       <section>
         <h2>Experience</h2>
+        <!-- IF / S7 -->
+        <h3>
+          Apr 2023 - Present | Software Engineer - Intelligence Fusion / Sigma7
+        </h3>
+        <ul>
+          <li>
+            Improved, optimised, and maintained multiple micro-services written
+            in PHP. Increasing test coverage to near 100% and solving
+            bottlenecks found via Sentry. Resulting in latency improvements of
+            up to 50%.
+          </li>
+          <li>
+            Re-wrote a Golang background service used for sending notifications
+            to clients, leading to a 4x throughput of events by using
+            concurrency.
+          </li>
+          <li>
+            Built both PHP and Golang services from the ground up to move
+            functionality out of a monolithic API.
+          </li>
+          <li>
+            Updated and maintained a legacy Python application used for 3rd
+            party data aggregation, adding tests and removing critical security
+            vulnerabilities.
+          </li>
+          <li>
+            Helped maintain and create new AWS infrastructure using Terraform
+            and GitHub Actions.
+          </li>
+          <li>
+            Helped maintain and improve a Vite + React based dashboard which
+            utilised Mapbox to display key data on a map.
+          </li>
+          <li>
+            Mentored multiple junior colleagues to support them in
+            cross-training into back-end work.
+          </li>
+        </ul>
+        <!-- Spindogs -->
+        <h3>Jan 2021 - Mar 2023 | Laravel Deveoper - Spindogs</h3>
+        <ul>
+          <li>
+            Took control of, and delivered, multiple large client projects from
+            start to finish using Laravel 7, 8, and 9. Using PHP versions 5.6,
+            7, and 8.
+          </li>
+          <li>
+            Built a travel card portal for Transport for Wales, averaging 150k
+            API requests per week (up to 10mb per request!).
+          </li>
+          <li>
+            Built a bespoke data aggregation dashboard for a leading UK care
+            home provider. Dealing with tens of millions of records to gain
+            useful insights into historical and relevant performance of
+            individual care homes on the fly.
+          </li>
+          <li>
+            Lead the overhaul and on-boarding of a data aggregation system for a
+            leading vehicle manufacturers Europe subsidiary. Providing
+            management with key insights into dealer / market / region
+            performance.
+          </li>
+          <li>
+            Upgraded and maintained multiple legacy projects written in PHP 5.6.
+            Increasing performance and implementing key features requested by
+            clients whilst improving general codebase quality where applicable.
+          </li>
+          <li>
+            Ensured all projects followed strict developer guidelines. Utilising
+            Azure DevOps for both CI/CD and sprints. Spearheading the
+            integration of automated testing using PHPUnit and code linting to
+            PSR12 for the back-end development team.
+          </li>
+        </ul>
+        <!-- SA1 Solutions -->
+        <h3>Nov 2016 - Jan 2017 | Junior Android Developer - SA1 Solutions</h3>
+        <ul>
+          <li>
+            Fixed and re-designed an Android app used by coach-builders to check
+            off jobs and their individual tasks. Increasing performance as well
+            as adapting for the large variation of devices used.
+          </li>
+          <li>
+            Designed an Android app to be used internally by off-site engineers
+            to mark off tasks on their jobs.
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Education</h2>
+        <!-- Swansea -->
+        <h3>
+          Sep 2019 - Sep 2020 | PGDip Advanced Software Technology - Swansea
+          University
+        </h3>
+        <!-- USW -->
+        <h3>
+          Sep 2016 - Jul 2019 | BSc Computer Applications Developement -
+          University of South Wales
+        </h3>
       </section>
       <section>
         <h2>Projects</h2>
+        <h3>TBA</h3>
       </section>
       <section>
         <h2>References</h2>
+        Available upon request
       </section>
     </main>
     <footer></footer>
