add links to headers

--- a/index.html
+++ b/index.html
@@ -3,30 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Callum Donovan - CV</title>
 
     <link rel="stylesheet" href="main.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,400;0,500;1,400;1,500&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <header>
       <h1><a href="#">Callum Donovan</a></h1>
     </header>
     <main>
-      <section>
-        <h2>Profile</h2>
+      <section id="profile">
+        <h2><a href="#profile">Profile</a></h2>
         <p>
-          Software Engineer with a shitload of experience dealing with proper
-          annoying people
+          Software Engineer with 4+ years of experience delivering small,
+          medium, and large projects in a wide range of business cases. I have
+          independently taken on projects from start to finish, as well as
+          within tight knit teams. I have a varied skill set within programming,
+          DevOps, and project management. Allowing me to deliver projects
+          on-time, on-budget, with the highest quality of workmanship. I always
+          strive to ensure systems are built with speed, simplicity, and
+          reliability in mind, and always look for the next best thing that will
+          make that goal easier to achieve. Adhering to modern standards in all
+          technologies I use, I have ensured that I can always create the best
+          software possible at all times, striving for the utmost simplicity and
+          efficiency. I am always keen to learn and adapt to new technologies.
         </p>
       </section>
-      <section>
-        <h2>Skills</h2>
+      <section id="skills">
+        <h2><a href="#skills">Skills</a></h2>
         <h3>Languages</h3>
         <ul>
           <li>PHP</li>
@@ -48,8 +52,8 @@
           <li>Git</li>
         </ul>
       </section>
-      <section>
-        <h2>Experience</h2>
+      <section id="experience">
+        <h2><a href="#experience">Experience</a></h2>
         <!-- IF / S7 -->
         <h3>
           Apr 2023 - Present | Software Engineer - Intelligence Fusion / Sigma7
@@ -138,8 +142,8 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Education</h2>
+      <section id="education">
+        <h2><a href="#education">Education</a></h2>
         <!-- Swansea -->
         <h3>
           Sep 2019 - Sep 2020 | PGDip Advanced Software Technology - Swansea
@@ -151,15 +155,23 @@
           University of South Wales
         </h3>
       </section>
-      <section>
-        <h2>Projects</h2>
+      <section id="projects">
+        <h2><a href="#projects">Projects</a></h2>
         <h3>TBA</h3>
       </section>
-      <section>
-        <h2>References</h2>
+      <section id="references">
+        <h2><a href="#references">References</a></h2>
         Available upon request
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section id="links">
+        <h2><a href="#links">Links</a></h2>
+        <ul>
+          <li><a href="">Github</a></li>
+          <li><a href="">LinkedIn</a></li>
+        </ul>
+      </section>
+    </footer>
   </body>
 </html>
