update content to match cv

--- a/index.html
+++ b/index.html
@@ -1,177 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Callum Donovan - CV</title>
 
-    <link rel="stylesheet" href="main.css" />
-  </head>
-  <body>
-    <header>
-      <h1><a href="#">Callum Donovan</a></h1>
-    </header>
-    <main>
-      <section id="profile">
-        <h2><a href="#profile">Profile</a></h2>
-        <p>
-          Software Engineer with 4+ years of experience delivering small,
-          medium, and large projects in a wide range of business cases. I have
-          independently taken on projects from start to finish, as well as
-          within tight knit teams. I have a varied skill set within programming,
-          DevOps, and project management. Allowing me to deliver projects
-          on-time, on-budget, with the highest quality of workmanship. I always
-          strive to ensure systems are built with speed, simplicity, and
-          reliability in mind, and always look for the next best thing that will
-          make that goal easier to achieve. Adhering to modern standards in all
-          technologies I use, I have ensured that I can always create the best
-          software possible at all times, striving for the utmost simplicity and
-          efficiency. I am always keen to learn and adapt to new technologies.
-        </p>
-      </section>
-      <section id="skills">
-        <h2><a href="#skills">Skills</a></h2>
-        <h3>Languages</h3>
-        <ul>
-          <li>PHP</li>
-          <li>Golang</li>
-          <li>JavaScript / TypeScript</li>
-          <li>SQL (MySQL, PostgreSQL, SQLite)</li>
-          <li>HTML / CSS</li>
-        </ul>
-        <h3>Frameworks</h3>
-        <ul>
-          <li>Laravel</li>
-          <li>React / React Native (Expo) / NextJS</li>
-        </ul>
-        <h3>Tools</h3>
-        <ul>
-          <li>Docker</li>
-          <li>AWS</li>
-          <li>Terraform</li>
-          <li>Git</li>
-        </ul>
-      </section>
-      <section id="experience">
-        <h2><a href="#experience">Experience</a></h2>
-        <!-- IF / S7 -->
-        <h3>
-          Apr 2023 - Present | Software Engineer - Intelligence Fusion / Sigma7
-        </h3>
-        <ul>
-          <li>
-            Improved, optimised, and maintained multiple micro-services written
-            in PHP. Increasing test coverage to near 100% and solving
-            bottlenecks found via Sentry. Resulting in latency improvements of
-            up to 50%.
-          </li>
-          <li>
-            Re-wrote a Golang background service used for sending notifications
-            to clients, leading to a 4x throughput of events by using
-            concurrency.
-          </li>
-          <li>
-            Built both PHP and Golang services from the ground up to move
-            functionality out of a monolithic API.
-          </li>
-          <li>
-            Updated and maintained a legacy Python application used for 3rd
-            party data aggregation, adding tests and removing critical security
-            vulnerabilities.
-          </li>
-          <li>
-            Helped maintain and create new AWS infrastructure using Terraform
-            and GitHub Actions.
-          </li>
-          <li>
-            Helped maintain and improve a Vite + React based dashboard which
-            utilised Mapbox to display key data on a map.
-          </li>
-          <li>
-            Mentored multiple junior colleagues to support them in
-            cross-training into back-end work.
-          </li>
-        </ul>
-        <!-- Spindogs -->
-        <h3>Jan 2021 - Mar 2023 | Laravel Deveoper - Spindogs</h3>
-        <ul>
-          <li>
-            Took control of, and delivered, multiple large client projects from
-            start to finish using Laravel 7, 8, and 9. Using PHP versions 5.6,
-            7, and 8.
-          </li>
-          <li>
-            Built a travel card portal for Transport for Wales, averaging 150k
-            API requests per week (up to 10mb per request!).
-          </li>
-          <li>
-            Built a bespoke data aggregation dashboard for a leading UK care
-            home provider. Dealing with tens of millions of records to gain
-            useful insights into historical and relevant performance of
-            individual care homes on the fly.
-          </li>
-          <li>
-            Lead the overhaul and on-boarding of a data aggregation system for a
-            leading vehicle manufacturers Europe subsidiary. Providing
-            management with key insights into dealer / market / region
-            performance.
-          </li>
-          <li>
-            Upgraded and maintained multiple legacy projects written in PHP 5.6.
-            Increasing performance and implementing key features requested by
-            clients whilst improving general codebase quality where applicable.
-          </li>
-          <li>
-            Ensured all projects followed strict developer guidelines. Utilising
-            Azure DevOps for both CI/CD and sprints. Spearheading the
-            integration of automated testing using PHPUnit and code linting to
-            PSR12 for the back-end development team.
-          </li>
-        </ul>
-        <!-- SA1 Solutions -->
-        <h3>Nov 2016 - Jan 2017 | Junior Android Developer - SA1 Solutions</h3>
-        <ul>
-          <li>
-            Fixed and re-designed an Android app used by coach-builders to check
-            off jobs and their individual tasks. Increasing performance as well
-            as adapting for the large variation of devices used.
-          </li>
-          <li>
-            Designed an Android app to be used internally by off-site engineers
-            to mark off tasks on their jobs.
-          </li>
-        </ul>
-      </section>
-      <section id="education">
-        <h2><a href="#education">Education</a></h2>
-        <!-- Swansea -->
-        <h3>
-          Sep 2019 - Sep 2020 | PGDip Advanced Software Technology - Swansea
-          University
-        </h3>
-        <!-- USW -->
-        <h3>
-          Sep 2016 - Jul 2019 | BSc Computer Applications Developement -
-          University of South Wales
-        </h3>
-      </section>
-      <section id="projects">
-        <h2><a href="#projects">Projects</a></h2>
-        <h3>TBA</h3>
-      </section>
-      <section id="references">
-        <h2><a href="#references">References</a></h2>
-        Available upon request
-      </section>
-    </main>
-    <footer>
-      <section id="links">
-        <h2><a href="#links">Links</a></h2>
-        <ul>
-          <li><a href="">Github</a></li>
-          <li><a href="">LinkedIn</a></li>
-        </ul>
-      </section>
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Callum Donovan - CV</title>
+
+  <link rel="stylesheet" href="main.css" />
+</head>
+
+<body>
+  <header>
+    <h1><a href="#">Callum Donovan</a></h1>
+  </header>
+  <main>
+    <section id="profile">
+      <h2><a href="#profile">Profile</a></h2>
+      <p>
+        Software Engineer with 4+ years of experience delivering small to medium projects in a wide range of business
+        cases. I have
+        independently taken on projects from start to finish, as well as within tight knit teams. I have a varied skill
+        set, specialising
+        in back-end and infrastructure, but with experience in front-end too. Allowing me to deliver projects on-time,
+        on-budget,
+        with the highest quality of workmanship. I always strive to ensure systems are built with speed, simplicity, and
+        reliability
+        in mind, and always look for the next best thing that will make that goal easier to achieve. Adhering to modern
+        standards in
+        all technologies I use, I have ensured that I can always create the best software possible at all times,
+        striving for the utmost
+        simplicity and efficiency. I am always keen to learn and adapt to both new and existing technologies
+      </p>
+    </section>
+    <section id="skills">
+      <h2><a href="#skills">Skills</a></h2>
+      <h3>Languages</h3>
+      <ul>
+        <li>PHP</li>
+        <li>Golang</li>
+        <li>JavaScript / TypeScript</li>
+        <li>SQL (MySQL, PostgreSQL, SQLite)</li>
+        <li>HTML / CSS</li>
+      </ul>
+      <h3>Frameworks</h3>
+      <ul>
+        <li>Laravel</li>
+        <li>SlimPHP</li>
+        <li>React / React Native (Expo) / NextJS</li>
+      </ul>
+      <h3>Tools</h3>
+      <ul>
+        <li>Docker</li>
+        <li>AWS</li>
+        <li>Terraform</li>
+        <li>Git</li>
+      </ul>
+    </section>
+    <section id="experience">
+      <h2><a href="#experience">Experience</a></h2>
+      <!-- IF / S7 -->
+      <h3>
+        Apr 2023 - Present | Software Engineer - Intelligence Fusion / Sigma7
+      </h3>
+      <p>Working within a tight-knit team, I designed, built, and maintained microservices and infrastructure to support
+        the needs of
+        the business. Contributing to project discovery and briefs, as well as regularly reviewing systems for
+        improvements where
+        possible.</p>
+      <ul>
+        <li>
+          Improved, optimised, and maintained multiple micro-services written in PHP. Increasing test coverage to near
+          100% and
+          solving bottlenecks found via Sentry. Resulting in latency improvements of up to 50%
+        </li>
+        <li>
+          Re-wrote a Golang background service used for sending notifications to clients, leading to a 4x throughput of
+          events by
+          using concurrency.
+        </li>
+        <li>Refactored a legacy Golang service used as a bridge for a 3rd party API, bringing it in line with the
+          standards of other services whilst simplifying the codebase.</li>
+        <li>
+          Built both PHP and Golang services from the ground up to move functionality out of a monolithic API written in
+          Lumen.
+        </li>
+        <li>
+          Refactored and maintained a legacy Python service used for 3rd party data aggregation, adding tests and fixing
+          critical security vulnerabilities.
+        </li>
+        <li>
+          Upskilled into DevOps / Platform Engineering to assist with maintaining, creating, and automating AWS
+          infrastructure using Terraform, TF Cloud, and GitHub Actions.
+        </li>
+        <li>
+          Helped maintain and improve a TypeScript, Vite, and React based dashboard.
+        </li>
+        <li>
+          Paired with other developers to create a platform based AI virtual assistant using Golang and Claude 3.5 via
+          AWS Bedrock.
+        </li>
+        <li>
+          Mentored multiple junior colleagues to support them in cross-training into back-end work.
+        </li>
+      </ul>
+      <!-- Spindogs -->
+      <h3>Jan 2021 - Mar 2023 | Laravel Deveoper - Spindogs</h3>
+      <p> Working in a team and also independently, I took control of small and medium size projects from their
+        inception to delivery. Liasing with clients and project managers, I ensured that queries and change requests
+        were handled efficiently and that clients were informed at all stages of development.</p>
+      <ul>
+        <li>
+          Took control of, and delivered, multiple small / medium client projects from start to finish using Laravel 7,
+          8, and 9. Using PHP versions 5.6, 7, and 8.
+        </li>
+        <li>
+          Built a travel card portal for TfW, which averaged ~150k API requests per week.
+        </li>
+        <li>
+          Built a bespoke data aggregation dashboard for a leading UK care home provider. Dealing with millions of
+          records to gain useful insights into historical and relevant performance of individual care homes.
+        </li>
+        <li>
+          Paired with the tech lead to overhaul and on-board new clients into a data aggregation system for a leading
+          vehicle manufacturers' Europe subsidiary. Providing management with key insights into dealer performance.
+        </li>
+        <li>
+          Refactored and maintained multiple legacy projects written in PHP 5.6. Increasing performance and implementing
+          key features requested by clients.
+        </li>
+        <li>
+          Ensured all projects followed strict developer guidelines. Utilising Azure DevOps for both CI/CD and sprints.
+          Spearheading the integration of automated testing for the back-end development team.
+        </li>
+      </ul>
+      <!-- SA1 Solutions -->
+      <h3>Nov 2016 - Jan 2017 | Junior Android Developer - SA1 Solutions</h3>
+    </section>
+    <section id="education">
+      <h2><a href="#education">Education</a></h2>
+      <!-- Swansea -->
+      <h3>
+        Sep 2019 - Sep 2020 | PGDip Advanced Software Technology - Swansea
+        University
+      </h3>
+      <!-- USW -->
+      <h3>
+        Sep 2016 - Jul 2019 | BSc Computer Applications Developement -
+        University of South Wales
+      </h3>
+    </section>
+    <!-- <section id="projects">
+      <h2><a href="#projects">Projects</a></h2>
+      <h3>TBA</h3>
+    </section> -->
+    <section id="references">
+      <h2><a href="#references">References</a></h2>
+      Available upon request
+    </section>
+  </main>
+  <footer>
+    <section id="links">
+      <h2><a href="#links">Links</a></h2>
+      <ul>
+        <li><a href="https://github.com/caldonovan">Github</a></li>
+        <li><a href="https://linkedin.com/in/caldonovan">LinkedIn</a></li>
+      </ul>
+    </section>
+  </footer>
+</body>
+
 </html>
